--- a/catalogo/lightPink.html
+++ b/catalogo/lightPink.html
@@ -76,59 +76,99 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="centro" style="padding-top: 4%;">
-                    <img src="../imagenes/White/white_b.png" width="90%" height="190" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/LightPink.png" width="90%" height="190" frameborder="0" style="border:0;">
                 </div>
             </div>
             <div class="col-md-3"></div>
 
             <div class="row" style="padding-top: 5%;">
                 <div class="col-md-3">
-                    <img src="../imagenes/White/akito.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/azahara.png" width="80%" height="80%" frameborder="0" style="border:0;">
                     <p>(AW1) &ensp;&ensp; $25.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="../imagenes/White/alba.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/christa.png" width="80%" height="80%" frameborder="0" style="border:0;">
                     <p>(AW2) &ensp;&ensp; $23.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="../imagenes/White/first lady.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/engagement.png" width="80%" height="80%" frameborder="0" style="border:0;">
                     <p>(FW3) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="../imagenes/White/miss white.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/frutteto.png" width="80%" height="80%" frameborder="0" style="border:0;">
                     <p>(MW4) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
             </div>
             <div class="row" style="padding-top: 1%;">
                 <div class="col-md-3">
-                    <img src="../imagenes/White/mondial.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/hermosa.png" width="80%" height="80%" frameborder="0" style="border:0;">
                     <p>(MW5) &ensp;&ensp; $20.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="../imagenes/White/playaBlanca.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/jessika.png" width="80%" height="80%" frameborder="0" style="border:0;">
                     <p>(PW7) &ensp;&ensp; $27.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="../imagenes/White/polarStar.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/engagement.png" width="80%" height="80%" frameborder="0" style="border:0;">
                     <p>(PW8) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="../imagenes/White/proud.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <img src="../imagenes/LightPink/luciano.png" width="80%" height="80%" frameborder="0" style="border:0;">
                     <p>(PW9) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
             </div>
-            <div class="row centro" style="padding-top: 1%;">
-                <div class="col-md-4">
-                    <img src="../imagenes/White/tibet.png" width="70%" height="80%" frameborder="0" style="border:0;">
-                    <p>(TW8) &ensp;&ensp; $29.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+            <div class="row" style="padding-top: 1%;">
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/motherOfPearl.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(MW5) &ensp;&ensp; $20.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
-                <div class="col-md-4">
-                    <img src="../imagenes/White/whiteCgocolate.png" width="70%" height="80%" frameborder="0" style="border:0;">
-                    <p>(WW9) &ensp;&ensp; $25.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/nena.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW7) &ensp;&ensp; $27.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
-                <div class="col-md-4">
-                    <img src="../imagenes/White/whitePorcelain.png" width="70%" height="80%" frameborder="0" style="border:0;">
-                    <p>(WW10) &ensp;&ensp; $24.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/novia.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW8) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/pastella.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW9) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+            </div>
+            <div class="row" style="padding-top: 1%;">
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/pinkCandy.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(MW5) &ensp;&ensp; $20.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/pinkMondial.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW7) &ensp;&ensp; $27.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/pinkPorcelain.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW8) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/ragazza.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW9) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+            </div>
+            <div class="row" style="padding-top: 1%;">
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/senorita.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(MW5) &ensp;&ensp; $20.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/sweetAkito.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW7) &ensp;&ensp; $27.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/sweetElegance.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW8) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                </div>
+                <div class="col-md-3">
+                    <img src="../imagenes/LightPink/titanic.png" width="80%" height="80%" frameborder="0" style="border:0;">
+                    <p>(PW9) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
             </div>
         </div><br>
