--- a/productos.html
+++ b/productos.html
@@ -107,7 +107,7 @@
         <div id="back_black" class="row image-center" >
             <div class="col-md-4" >
                 <div class="loc centro">
-                    <a style="text-decoration:none;" href="index.html">
+                    <a style="text-decoration:none;" href="catalogo/lightPink.html">
                         <img src="imagenes/Rosas/light pink.png" class="img-fluid" title="Rosas Light pink" />
                         <span class="faldon">-Light Pink-</span>
                     </a>
@@ -193,7 +193,7 @@
             </div>
             <div class="col-md-4">
                 <div class="loc centro">
-                    <a style="text-decoration:none;" href="index.html">
+                    <a style="text-decoration:none;" href="catalogo/pink.html">
                         <img src="imagenes/Rosas/pink.png" class="img-fluid" title="Pink" />
                         <span class="faldon">-Pink-</span>
                     </a>
