--- a/agradecimiento.html
+++ b/agradecimiento.html
@@ -35,9 +35,9 @@
             </button>
             <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
                 <ul class="navbar-nav w-100 justify-content-center">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">
-                            Inicio<span class="sr-only">(current)</span>
+                            Inicio
                         </a>
                     </li>
                     <li class="nav-item">
@@ -68,64 +68,20 @@
             </div>
         </nav>
     </header>
-    <main role="main" id="col-green">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                        preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-                        <rect width="100%" height="100%" fill="#4FA5FF"></rect>
-                        <img class="img-fluid" src="imagenes/slider01.jpg" alt="" style="height:100%; width: 100%;">
-                    </svg>
-                </div>
-                <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                        preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-                        <rect width="100%" height="100%" fill="#777"></rect>
-                        <img class="img-fluid" src="imagenes/slider02.jpg" alt="" style="height:100%; width: 100%;">
-                    </svg>
-                </div>
-                <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                        preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
-                        <rect width="100%" height="100%" fill="#4FA5FF"></rect>
-                        <img class="img-fluid" src="imagenes/slider03.png" alt=""
-                            style="height:100%; width: 100%;">
-                    </svg>
-                </div>
+    <main role="main" id="col-green" style="padding-top: 5%;">
+        <h1 style="text-align: center; font-size: 160px; color: #FF3366;">Gracias por preferirnos</h1><br>
+
+        <div class="row">
+            <div class="col-md-3">
             </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev" >
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-3">
+                <button onclick="location.href='CarritoCompras.html'" type="button" class="btn btn-outline-danger btn-lg">Ir a mi carrito</button>
+            </div>
         </div>
-
-        <div id="div-row-color" class="row" >
-            <div class="col-lg-5 ">
-                <h1 class="text-center">OFERTAS</h1>
-                <p class="text-center">Quieres celebrar una fecha especial<br>No te pierdas nuestras promociones<br><br></p>
-                <h4 class="text-center">En Diciembre!</h4>
-                <p class="text-center">APROVECHA<br>25%<br>DE DESCUENTO<br>USANDO EL CODIGO: <span id="spans">Dic2019</span></p>
-            </div>
-            <div class="col-lg-2" style="background-image: url('imagenes/Captura_7.png'); background-size: cover;">
-                <br><br><br><br><br><br><br><br><button onclick="location.href='ofertas.html'" id="btn01" >Conoce más</button>
-            </div>
-            <div class="col-lg-3" style="background-image: url('imagenes/Captura5.png'); background-size: cover;"></div>
-            <div class="col-lg-2" style="background-image: url('imagenes/final.png'); background-size: cover;"></div>
-        </div>
-        
-
-      
-
 
     </main>
 </body>
