--- a/catalogo/white.html
+++ b/catalogo/white.html
@@ -58,7 +58,7 @@
                 </ul>
                 <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="CarritoCompras.html">
                             <img src="../imagenes/carrito_compras_white.png" alt="Home" width="25px" height="25px">
                         </a>
                     </li>
@@ -84,51 +84,51 @@
             <div class="row" style="padding-top: 5%;">
                 <div class="col-md-3">
                     <img src="../imagenes/White/akito.png" width="80%" height="80%" frameborder="0" style="border:0;">
-                    <p>(AW1) &ensp;&ensp; $25.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(AW1) &ensp;&ensp; $25.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
                     <img src="../imagenes/White/alba.png" width="80%" height="80%" frameborder="0" style="border:0;">
-                    <p>(AW2) &ensp;&ensp; $23.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(AW2) &ensp;&ensp; $23.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
                     <img src="../imagenes/White/first lady.png" width="80%" height="80%" frameborder="0" style="border:0;">
-                    <p>(FW3) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(FW3) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
                     <img src="../imagenes/White/miss white.png" width="80%" height="80%" frameborder="0" style="border:0;">
-                    <p>(MW4) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(MW4) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
             </div>
             <div class="row" style="padding-top: 1%;">
                 <div class="col-md-3">
                     <img src="../imagenes/White/mondial.png" width="80%" height="80%" frameborder="0" style="border:0;">
-                    <p>(MW5) &ensp;&ensp; $20.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(MW5) &ensp;&ensp; $20.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
                     <img src="../imagenes/White/playaBlanca.png" width="80%" height="80%" frameborder="0" style="border:0;">
-                    <p>(PW7) &ensp;&ensp; $27.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(PW7) &ensp;&ensp; $27.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
                     <img src="../imagenes/White/polarStar.png" width="80%" height="80%" frameborder="0" style="border:0;">
-                    <p>(PW8) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(PW8) &ensp;&ensp; $22.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-3">
                     <img src="../imagenes/White/proud.png" width="80%" height="80%" frameborder="0" style="border:0;">
-                    <p>(PW9) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(PW9) &ensp;&ensp; $26.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
             </div>
             <div class="row centro" style="padding-top: 1%;">
                 <div class="col-md-4">
                     <img src="../imagenes/White/tibet.png" width="70%" height="80%" frameborder="0" style="border:0;">
-                    <p>(TW8) &ensp;&ensp; $29.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(TW8) &ensp;&ensp; $29.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-4">
                     <img src="../imagenes/White/whiteCgocolate.png" width="70%" height="80%" frameborder="0" style="border:0;">
-                    <p>(WW9) &ensp;&ensp; $25.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(WW9) &ensp;&ensp; $25.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
                 <div class="col-md-4">
                     <img src="../imagenes/White/whitePorcelain.png" width="70%" height="80%" frameborder="0" style="border:0;">
-                    <p>(WW10) &ensp;&ensp; $24.00 &ensp;&ensp;<a href="../carrito.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
+                    <p>(WW10) &ensp;&ensp; $24.00 &ensp;&ensp;<a href="../CarritoCompras.html"><img src="../imagenes/carrito_compras_white.png" width="20" height="20"></a></p>
                 </div>
             </div>
         </div><br>
