--- a/catalogo/lightPink.html
+++ b/catalogo/lightPink.html
@@ -58,7 +58,7 @@
                 </ul>
                 <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="CarritoCompras.html">
                             <img src="../imagenes/carrito_compras_white.png" alt="Home" width="25px" height="25px">
                         </a>
                     </li>
